# number2words

./: LICENSE  MANIFEST.in  Makefile  README.md  doc_req.txt  pyproject.toml  requirements.txt  setup.py
examples/: usage_example.py
github/workflows/: ci.yml  mkdocs.yml  readthedocs.yml  travis.yml
num2text/: __init__.py  cli.py  converter.py  en.py  exceptions.py  fa.py
tests/: __init__.py  test_en.py  test_fa.py
