[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "number2words"
version = "1.0.0"
description = "Convert numbers to words in English and Persian"
authors = [
  { name = "Reza Torabi", email = "rezatutor475@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []
keywords = ["number", "words", "english", "persian", "farsi", "conversion"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Natural Language :: Persian",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
number2words = "number2words.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
